--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.3",
     "express-joi-validation": "^5.0.1",
+    "fs": "^0.0.1-security",
     "generate-password": "^1.7.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
